Dashboard: fixed text alignment issue in the ios7 style
git-svn-id: svn://svn.code.sf.net/p/fhem/code/trunk@8970 2b470e98-0d58-463d-a4d8-8e2adae1ed80

--- a/fhem/www/pgm2/dashboard_ios7.css
+++ b/fhem/www/pgm2/dashboard_ios7.css
@@ -168,10 +168,6 @@ body.dashboard_fullsize #content {
   border: none !important;
 }
 
-.col2 {
-  text-align: center;
-}
-
 .dashboard_widgetheader svg {
   margin-right: 5px;
 }
